--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -13,9 +13,9 @@
             #thirdDiv {
                 width: 500px;
                 height: 600px;
-                background: red;
+                background: rgba(214, 16, 16, 0.534);
                 padding: 50px;
-                border: 5px thick double rgb(9, 134, 72);
+                border: 5px thick double rgba(9, 134, 71, 0.616);
             }
             #spanId {
                 font-size: 18px;
