--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -3,27 +3,8 @@
     <head>
 
         <title>Tarea HTML de Matias</title>
-        <style>
-            h1 {
-                color: aqua;
-            }
-            img {
-                width: 400px;
-            }
-            #thirdDiv {
-                width: 500px;
-                height: 600px;
-                background: rgba(214, 16, 16, 0.534);
-                padding: 50px;
-                border: 5px thick double rgba(9, 134, 71, 0.616);
-            }
-            #spanId {
-                font-size: 18px;
-                margin: 50px;
-            }
-        </style>
 
-        <link rel="stylesheet" href="./ styles.css">
+        <link rel=stylesheet href=styles.css>
 
     </head>
 
@@ -36,8 +17,8 @@
         </div>
 
         <div id="divClass">
-            <span id="spanId">Pizza</span>
-            <a href="https://www.facebook.com/Locos-X-La-Pizza-394267257379457/?fref=ts">Locos por la pizza</a>
+            <span id="spanId">Mi comida favotira es Pizza</span>
+            <a href="https://www.facebook.com/Locos-X-La-Pizza-394267257379457/?fref=ts">Mi restaurante favorito "Locos por la Pizza"</a>
         </div>
 
         <div id="thirdDiv">
